--- a/assets/css/commentpress-sof-de.css
+++ b/assets/css/commentpress-sof-de.css
@@ -43,6 +43,7 @@ Header
 {
 	width: 50px;
 	height: 50px;
+	padding: 12px 6px 0 72px;
 }
 
 #title h1
@@ -128,7 +129,14 @@ Header
 
 	#header #tagline
 	{
-		font-size: 70%;
+		/* font-size: 70%; */
+	}
+}
+
+@media (max-width: 320px) {
+	#header #tagline
+	{
+		padding-top: 0.5em;
 	}
 }
 
@@ -151,7 +159,7 @@ Content
 /* Support SOF Utilities Mirror */
 .sof_mirror
 {
-	margin: 1em auto;
+	margin: 2.5em 0 1em 0;
 }
 
 .sof_mirror a,
@@ -161,6 +169,13 @@ Content
 {
 	text-transform: uppercase;
 	font-weight: bold;
+}
+
+@media (max-width: 450px) {
+	.sof_mirror
+	{
+		margin: 1.5em 0 1em 0;
+	}
 }
 
 
@@ -1766,7 +1781,7 @@ Responsive Tweaks
 
 	#page_title
 	{
-		margin-right: 100px;
+		margin-right: 120px;
 	}
 
 	body.single .cp_feature_image .cp_featured_title .cp_featured_title_inner h2.post_title
