minor adjustment to footer image widget

--- a/assets/css/commentpress-sof-de.css
+++ b/assets/css/commentpress-sof-de.css
@@ -188,7 +188,8 @@ Footer
 
 #footer_inner .footer_widgets .widget
 {
-    margin: 1.25em;
+	margin: 1.25em auto;
+	width: 80%;
 }
 
 #footer_inner > p
