Reduce size of balls :-)

--- a/assets/css/commentpress-sof-de.css
+++ b/assets/css/commentpress-sof-de.css
@@ -593,6 +593,24 @@ Widgets & Widget Areas
 
 /*
 --------------------------------------------------------------------------------
+The Ball Collection inline content
+--------------------------------------------------------------------------------
+*/
+
+@media all and (max-width: 600px) {
+
+	.ball-collection img
+	{
+		width: 80px;
+		height: auto;
+	}
+
+}
+
+
+
+/*
+--------------------------------------------------------------------------------
 Latest from The Ball Widget
 --------------------------------------------------------------------------------
 */
