--- a/assets/css/commentpress-sof-de.css
+++ b/assets/css/commentpress-sof-de.css
@@ -1788,6 +1788,14 @@ BuddyPress Docs
 --------------------------------------------------------------------------------
 */
 
+body.bp-docs #content,
+body.archive.bp-docs #content
+{
+	padding: 0;
+	margin: 0;
+	min-height: 0;
+}
+
 body.bp-docs h2.post_title,
 body.groups h2.post_title
 {
@@ -1807,6 +1815,17 @@ body.groups h2.post_title
 .bp-docs h2.doc-title
 {
 	text-transform: none;
+}
+
+#buddypress table.doctable p.no-docs a
+{
+	font-size: 100%;
+	font-family: Lato, 'Trebuchet MS', Helvetica, Arial, sans-serif;
+}
+
+#buddypress table.doctable .edited-date-cell
+{
+	width: 110px;
 }
 
 
