--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: CommentPress SOF Germany
-Theme URI: http://www.futureofthebook.org/commentpress/
-Description: A child of the CommentPress Flat Theme for <em>CommentPress Core</em>.
+Theme Name: CommentPress SOF
+Theme URI: https://github.com/spiritoffootball/commentpress-sof-de
+Description: A child of the CommentPress Flat Theme for <em>Spirit of Football</em>.
 Tags: commentpress, buddypress, groupblog, sticky-post, threaded-comments, paragraph-comments
 Version: 1.4.4
 Template: commentpress-flat
