Hide Jetpack sharing in widget

--- a/assets/css/commentpress-sof-de.css
+++ b/assets/css/commentpress-sof-de.css
@@ -809,6 +809,11 @@ Latest "Ballblog" Widget
 	margin-top: 0;
 }
 
+.widget.widget_latest_ball_post .latest_ball_post .sharedaddy
+{
+    display: none;
+}
+
 
 
 /*
