Update author website

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Tags: commentpress, buddypress, groupblog, sticky-post, threaded-comments, parag
 Version: 1.4.6
 Template: commentpress-flat
 Author: Christian Wach
-Author URI: http://www.haystack.co.uk
+Author URI: https://www.haystack.co.uk
 Text Domain: commentpress-sof-de
 Domain Path: /languages
 */
