--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  * Theme Name:  CommentPress SOF
  * Description: A child of the CommentPress Flat Theme for <em>Spirit of Football</em>.
  * Theme URI:   https://github.com/spiritoffootball/commentpress-sof-de
- * Version:     1.4.6
+ * Version:     1.4.7a
  * Author:      Christian Wach
  * Author URI:  https://www.haystack.co.uk
  * Template:    commentpress-flat
